# TrIAge

./: .env.example  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: SOP_MAINTENANCE.md  TECHNICAL_SPEC.md  TEST_SUITE_SUMMARY.md
scripts/: create_demo_repo.py  run_agent.py  train_model.py
tests/: __init__.py  conftest.py  test_adapters.py  test_config.py  test_integration.py  test_models.py  test_preprocessing.py  test_routing.py  test_telemetry.py
triage/: __init__.py  config.py
triage/adapters/: github.py  openrouter.py
triage/agent/: __init__.py  run.py
triage/models/: __init__.py  base.py  llm.py  local_model.py
triage/preprocessing/: text.py
triage/routing/: __init__.py  handlers.py
triage/telemetry/: logger.py
triage/training/: dataset.py  train.py
